force-app/main/default/objects/RecurringDonationSchedule__c/RecurringDonationSchedule__c.object-meta.xml
<CustomObject>
    <description>Contains the current and past schedule(s) for each Recurring Donation. Records in this object are system maintained and should never be edited directly.</description>
    <label>Recurring Donation Schedule</label>
    <nameField>
        <displayFormat>RD-Schedule-{0000000000}</displayFormat>
        <label>Recurring Schedule Num</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Recurring Donation Schedules</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>