force-app/main/default/objects/RecurringDonationSchedule__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <description>Establishes whether the Recurring Donation Schedule is active or inactive. Read only</description>
    <formula>OR( ISBLANK( EndDate__c ), AND( EndDate__c &gt;= TODAY(), NOT( StartDate__c &gt; EndDate__c ) ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Establishes whether the Recurring Donation Schedule is active or inactive based on End Date. Read only.</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>