force-app/main/default/objects/RecurringDonationSchedule__c/fields/Campaign__c.field-meta.xml
<CustomField>
    <fullName>Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Campaign associated with the Recurring Donation when this schedule record was created.</description>
    <inlineHelpText>The Campaign associated with the Recurring Donation when this schedule record was created.</inlineHelpText>
    <label>Related Campaign</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Recurring Donation Schedules</relationshipLabel>
    <relationshipName>RecurringDonationSchedules</relationshipName>
    <type>Lookup</type>
</CustomField>