force-app/main/default/objects/RecurringDonationSchedule__c/fields/EndDate__c.field-meta.xml
<CustomField>
    <fullName>EndDate__c</fullName>
    <description>The ending date, if required, for this schedule record.</description>
    <inlineHelpText>The ending date, if required, for this schedule record.</inlineHelpText>
    <label>Schedule End Date</label>
    <type>Date</type>
</CustomField>