force-app/main/default/objects/RecurringDonationSchedule__c/fields/ExternalId__c.field-meta.xml
<CustomField>
    <fullName>ExternalId__c</fullName>
    <description>For integration with external services or data warehouses.</description>
    <externalId>true</externalId>
    <inlineHelpText>For integration with external services or data warehouses.</inlineHelpText>
    <label>External Schedule Id</label>
    <length>128</length>
    <type>Text</type>
</CustomField>