force-app/main/default/objects/RecurringDonationSchedule__c/fields/InstallmentAmount__c.field-meta.xml
<CustomField>
    <fullName>InstallmentAmount__c</fullName>
    <description>The amount for each installment Opportunity.</description>
    <inlineHelpText>The amount for each installment Opportunity.</inlineHelpText>
    <label>Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>