force-app/main/default/objects/RecurringDonationSchedule__c/fields/InstallmentFrequency__c.field-meta.xml
<CustomField>
    <fullName>InstallmentFrequency__c</fullName>
    <defaultValue>1</defaultValue>
    <description>Defines the installment schedule of this Recurring Donation along with Installment Period. For example, if Installment Period is Monthly and Installment Frequency is 3, the schedule would be defined as &quot;every 3 months&quot;.</description>
    <inlineHelpText>Defines the installment schedule of this Recurring Donation along with Installment Period. For example, if Installment Period is Monthly and Installment Frequency is 3, the schedule would be defined as &quot;every 3 months&quot;.</inlineHelpText>
    <label>Installment Frequency</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>