force-app/main/default/objects/RecurringDonationSchedule__c/fields/InstallmentPeriod__c.field-meta.xml
<CustomField>
    <fullName>InstallmentPeriod__c</fullName>
    <description>Defines the installment schedule of this Recurring Donation along with Installment Frequency. For example, if Installment Period is Monthly and Installment Frequency is 3, the schedule would be defined as &quot;every 3 months&quot;.</description>
    <inlineHelpText>Defines the installment schedule of this Recurring Donation along with Installment Frequency. For example, if Installment Period is Monthly and Installment Frequency is 3, the schedule would be defined as &quot;every 3 months&quot;.</inlineHelpText>
    <label>Installment Period</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Yearly</fullName>
            </value>
            <value>
                <fullName>Weekly</fullName>
            </value>
            <value>
                <fullName>Daily</fullName>
            </value>
            <value>
                <fullName>1st and 15th</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>