force-app/main/default/objects/RecurringDonationSchedule__c/fields/IsPause__c.field-meta.xml
<CustomField>
    <fullName>IsPause__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Set when the schedule record represents Recurring Donation pause date range</description>
    <inlineHelpText>Set when the schedule record represents Recurring Donation pause date range</inlineHelpText>
    <label>Is Pause</label>
    <type>Checkbox</type>
</CustomField>