force-app/main/default/objects/RecurringDonationSchedule__c/fields/NextPaymentAmount__c.field-meta.xml
<CustomField>
    <fullName>NextPaymentAmount__c</fullName>
    <description>The amount override for the next installment Opportunity.</description>
    <inlineHelpText>The amount override for the next installment Opportunity.</inlineHelpText>
    <label>Next Payment Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>