force-app/main/default/objects/RecurringDonationSchedule__c/fields/PaymentMethod__c.field-meta.xml
<CustomField>
    <fullName>PaymentMethod__c</fullName>
    <description>The form of payment for this Recurring Donation. NPSP automatically copies the selected value to each related Payment record.</description>
    <inlineHelpText>The form of payment for this Recurring Donation. NPSP automatically copies the selected value to each related Payment record.</inlineHelpText>
    <label>Payment Method</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Credit Card</fullName>
            </value>
            <value>
                <fullName>Check</fullName>
            </value>
            <value>
                <fullName>ACH</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>