force-app/main/default/objects/RecurringDonationSchedule__c/fields/RecurringDonation__c.field-meta.xml
<CustomField>
    <fullName>RecurringDonation__c</fullName>
    <description>The Recurring Donation this schedule record is associated with.</description>
    <inlineHelpText>The Recurring Donation this schedule record is associated with.</inlineHelpText>
    <label>Recurring Donation</label>
    <referenceTo>npe03__Recurring_Donation__c</referenceTo>
    <relationshipLabel>Recurring Donation Schedules</relationshipLabel>
    <relationshipName>RecurringDonationSchedules</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>