force-app/main/default/objects/RecurringDonationSchedule__c/fields/StartDate__c.field-meta.xml
<CustomField>
    <fullName>StartDate__c</fullName>
    <description>The effective date for this schedule record.</description>
    <inlineHelpText>The effective date for this schedule record.</inlineHelpText>
    <label>Effective Date</label>
    <type>Date</type>
</CustomField>