force-app/main/default/objects/RecurringDonationSchedule__c/fields/StatusReason__c.field-meta.xml
<CustomField>
    <fullName>StatusReason__c</fullName>
    <description>Contains additional details for the schedule. For example, a paused reason for a paused schedule.</description>
    <inlineHelpText>Contains additional details for the schedule. For example, a paused reason for a paused schedule.</inlineHelpText>
    <label>Status Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>